Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -81,7 +81,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Schrodinger equation\n",
+        "## Schrödinger equation\n",
         "\n",
         "Wavefunction: $|x,t\\rangle \\equiv \\Psi(x,t)$\n",
         "\n",
@@ -94,7 +94,7 @@
         "$$\n",
         "|x,t\\rangle = e^{-iEt}|x\\rangle\n",
         "$$\n",
-        "Time independent Shrodinger equation:  \n",
+        "Time independent Shrödinger equation:  \n",
         "$$\n",
         "\\left[-{1\\over2m}{\\partial^2\\over\\partial x^2}+V\\right]|x\\rangle =\n",
         "E|x\\rangle\n",
@@ -118,7 +118,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## quantum harmonic oscillator\n",
+        "## Quantum Harmonic Oscillator\n",
         "\n",
         "![](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAQtzmQ2B0LBknmDjxYqGFuxcYlmkScvtMbyBLiGZkmdaZJDaYEny5Q7q0if3aEcVnnZA&usqp=CAU)\n",
         "$$\n",
@@ -268,19 +268,27 @@
         "[a_{\\mathbf kr},a^\\dagger_{\\mathbf k's}]=\\delta_{\\bf kk'}\\delta_{rs}\n",
         "$$\n",
         "\n",
-        "## electron field  \n",
+        "## Electron field  \n",
+        "\n",
+        "Electron field는 모든 identical한 전자들을 하나의 field로 표기한다.   \n",
         "\n",
         "$\\sigma$: electron spin  \n",
+        "$c^\\dagger_{\\bf k\\sigma}, c_{\\bf k\\sigma}$: creation and anhilation operator of electron  \n",
+        "\n",
         "Fourier component of electron field:  \n",
         "$$\\psi_\\sigma(\\mathbf r)={1\\over\\sqrt N}\\sum_{\\bf k} e^{-i\\bf k\\cdot r}c_{\\bf k\\sigma} \\tag{3.12}\n",
         "$$\n",
-        "$c^\\dagger_{\\bf k\\sigma}, c_{\\bf k\\sigma}$: creation and anhilation operator of electron  \n",
+        "\n",
+        "전자들의 밀도:  \n",
+        "\n",
         "$$\n",
         "\\rho(\\mathbf r) = \\sum_\\sigma \\psi^\\dagger_\\sigma(\\mathbf r)\\psi_\\sigma(\\mathbf r) \\tag{3.13}\n",
         "$$\n",
         "\n",
         "\n",
-        "## electron-phonon interaction  \n",
+        "## Electron-phonon interaction\n",
+        "\n",
+        "전자와 lattice ion간의 interaction energy는 특정위치($\\bf x$)와 ion의 거리에 따른 위치 에너지의 합계($\\sum_\\mathbf RV(\\mathbf x-\\mathbf X)$에 밀도를 곱하고 전공간에 대해 적분한 것이다.\n",
         "\n",
         "$\\rho$: density of electron  \n",
         "$V$: potential with lattice atomic system  \n",
@@ -362,7 +370,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## perturbation using canonical transformation\n",
+        "## Perturbation using Schrieffer-Wolff transformation\n",
+        "\n",
+        "Canonical transformation을 이용한 이 purturbation theory는 degenerate perturbation theory의 한 종류이다.  \n",
         "\n",
         "Hamiltonian이 다음과 같을때,\n",
         "$$\n",
@@ -601,7 +611,7 @@
         "\\omega_D \\equiv \\omega_\\text{max} = v\\left(6\\pi^2{N\\over V}\\right)^{1\\over3}\n",
         "$$\n",
         "\n",
-        "따라서 crystal내의 wave의 분포는 다음의 그래프와 갖다.\n",
+        "따라서 crystal내의 phonon의 frequency 분포는 다음의 그래프와 갖다.\n",
         "\n",
         "\n",
         "<div>\n",
@@ -655,7 +665,7 @@
         "atom이 활성화(excited states)된 후 지속시간은 $\\omega_D^{-1}$이다.   \n",
         "따라서 첫번째 전자가 지나간 후 한참 뒤에 두번째 전자가 이 excited state와 interact할 수 있다. 이 지연된(retarded) interaction은 Coulomb force에 의한 replusive interaction을 크게 감소시킨다.    \n",
         "\n",
-        "금속내 전자의 attractive force는 Frohlich(1950, 1952), Bardeen과 Pines(1955) 그리고 Pines(1959) 등에 의하여 발표되었다.  "
+        "금속내 전자의 attractive force는 Fröhlich(1950, 1952), Bardeen과 Pines(1955) 그리고 Pines(1959) 등에 의하여 발표되었다.  "
       ],
       "metadata": {
         "id": "uBcoRkeRPlk_"
@@ -742,7 +752,7 @@
         "(E_{\\mathbf k'}-E_{\\bf k'-q})^2-\\omega^2_D} \\approx -g^2\n",
         "$$\n",
         "\n",
-        "그러면 Frohlich Hamiltonian에서 free phonon을 뺀 Hamiltonian은 다음과 같다. (spin sum 생략)  \n",
+        "그러면 Fröhlich Hamiltonian에서 free phonon을 뺀 Hamiltonian은 다음과 같다. (spin sum 생략)  \n",
         "\n",
         "$$\n",
         "H = H_{e}+H_{e-ph}\\\\\n",
