Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -163,9 +163,11 @@
         "$$\n",
         "절대값을 취해 보면,\n",
         "$$\n",
+        "\\begin{gather*}\n",
         "\\langle n|a^\\dagger a|n\\rangle = n=c^2\\\\\n",
         "c = \\sqrt n\\\\\n",
         "\\therefore a|n\\rangle=\\sqrt n|n-1\\rangle\n",
+        "\\end{gather*}\n",
         "$$\n",
         "마찬가지로 $a^\\dagger$에 대해서는 다음과 같다.\n",
         "$$\n",
@@ -1406,7 +1408,7 @@
         "\n",
         "\n",
         "\n",
-        "## Coherece lenth of Cooper pair\n",
+        "## Coherece length of Cooper pair\n",
         "\n",
         "\bCooper pair는 momentum 공간에서의 bound state이다. Fermi energy 근처의 engergy gap $\\Delta$내에서 $\\bf k$와 $-\\bf k$의 전자들이 wave packet을 형성한다. Momontum 공간에서 이 영역의 폭은 다음과 같다.  \n",
         "\n",
@@ -1575,7 +1577,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## perturbation theory (quantum mechanics)\n",
+        "## Perturbation theory (quantum mechanics)\n",
         "\n",
         "Total Hamiltonian = Free particle Hamiltonian  + Interaction Hamiltonian\n",
         "$$\n",
@@ -1634,6 +1636,15 @@
       ],
       "metadata": {
         "id": "MjMajsQlTWcL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# To-do (미정리 메모)"
+      ],
+      "metadata": {
+        "id": "FY9mW8-xegCa"
       }
     },
     {
@@ -1924,7 +1935,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# critics\n",
+        "## Critics of BCS theory\n",
         "\n",
         "http://www7b.biglobe.ne.jp/~kcy05t/sbcs.html  "
       ],
