Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -45,7 +45,7 @@
         "\n",
         "**Cooper pair**\n",
         "\n",
-        "Momentum과 spin이 반대인 전자가 ground state(0도)에서 pair를 형성하여 bounded state가 되는 것을 보인다.\n",
+        "Momentum과 spin이 반대인 전자가 ground state(0도)에서 pair를 형성하여 bound state가 되는 것을 보인다.\n",
         "\n",
         "**BCS theory**\n",
         "\n",
@@ -61,7 +61,7 @@
         "\n",
         "**Appendix**\n",
         "\n",
-        "1. 3차원에서 일반적인 weak potential은 bounded state를 형성할 수 없음을 보인다.\n",
+        "1. 3차원에서 일반적인 weak potential은 bound state를 형성할 수 없음을 보인다.\n",
         "\n",
         "\n"
       ],
@@ -290,7 +290,7 @@
         "\n",
         "## Electron-phonon interaction\n",
         "\n",
-        "전자와 lattice ion간의 interaction energy는 특정위치($\\bf x$)와 ion의 거리에 따른 위치 에너지의 합계($\\sum_\\mathbf RV(\\mathbf x-\\mathbf X)$에 밀도를 곱하고 전공간에 대해 적분한 것이다.\n",
+        "전자와 lattice ion간의 interaction energy는 특정위치($\\bf x$)와 ion의 거리에 따른 위치 에너지의 합계 $\\sum_\\mathbf RV(\\mathbf x-\\mathbf X)$에 밀도를 곱하고 공간에 대해 적분한 것이다.\n",
         "\n",
         "$\\rho$: density of electron  \n",
         "$V$: potential with lattice atomic system  \n",
@@ -474,6 +474,8 @@
         "c^\\dagger_{\\bf k'-q}c_{\\bf k'}\n",
         "$$\n",
         "\n",
+        "Phonon를 매개로하는 electron-electron scattering의 effective potential은 다음과 같다. [^Heid]\n",
+        "\n",
         "$$\n",
         "V_{\\text {eff}} =g_{\\bf kq}g_{\\bf k',-q}\n",
         "{\\omega_{\\bf q}\\over\n",
@@ -481,7 +483,7 @@
         "}\n",
         "$$\n",
         "\n",
-        "ref: Electron-Phonon Coupling - Heid.pdf\n",
+        "[Heid]: Electron-Phonon Coupling - Heid.pdf\n",
         "\n",
         "\n"
       ],
@@ -641,6 +643,9 @@
         "<img src=\"https://i.imgur.com/f7aFk6j.png\" label=\"Annette\" width=\"400\"/>\n",
         "</div>\n",
         "\n",
+        "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;**그림.\u0003** 두 전자가 scattering될 때의 전후 momentum의 가능한 범위. \n",
+        "\n",
+        "\n",
         "두개의 전자가 phonon에 의에 매개될 때, scattering 전,후의 에너지는 Fermi 에너지 $\\epsilon_F$로부터 $\\pm kT$ 범위에 있다.  \n",
         "온도가 Debye frequency의 범위보다 낮다면, interaction은 attractive이다.  \n",
         "대략적으로 phonon의 frequency는 $\\omega_D$라고 평균할 수 있다.    \n",
@@ -691,10 +696,9 @@
         "\n",
         "2. 두 전자가 같은 spin을 가질 경우, exchange 에너지 때문에(exchange hole) interaction을 약화시킨다. 따라서 더 낮은 에너지를 갖기 위해서는 두 전자의 spin이 달라야 한다.[^MFYS]  [^Margin]  \n",
         "    ![https://imgur.com/a/zGBsvRN](https://i.imgur.com/VsrPwCU.png)  \n",
-        "    **그림\u0003**  \n",
-        "    두 전자의 위치 correlation  \n",
-        "    전자가 움직일 때 같은 spin의 전자는 그 위치에 존재할 수 없다.  \n",
-        "    전자의 주변에 같은 spin의 전자는 사라져서 exchange hole을 형성하게 된다.[^Annett]\n",
+        "    **그림.\u0003** 두 전자의 위치 correlation 값.  \n",
+        "    전자가 움직일 때 같은 spin의 전자는 그 위치에 중첩될 수 없다.  \n",
+        "    전자의 주변에 같은 spin의 전자가 사라지는 exchange hole을 형성하게 된다.[^Annett]\n",
         "\n",
         "Fermi level위에 두 전자의 wavefunction을 무게 중심 $\\mathbf R_\\text{cm}=({\\bf r_1+r_2})/2$으로 분리하면 다음과 같다.\n",
         "\n",
@@ -817,7 +821,7 @@
         "이것은 통상적으로는 볼 수 없는 이상한 현상이다. 왜냐하면 interaction이 없는 두 자유전자의 에너지는 $2\\epsilon_\\mathbf k + 2\\epsilon_F$인데, 두 interacting 전자의 ground state 에너지는 $E + 2\\epsilon_F < 2\\epsilon_F $이기 때문이다. 아무리 interaction이 적더라도, $2\\epsilon_\\mathbf k$ 만큼의 에너지 저하가 일어났다고 볼 수 있다.  \n",
         "\n",
         "특히 일반적인 3차원에서 아주 작은 attractive force로는 bound state를 형성할 수 없다.  (1차원과 2차원에서는 arbitarily small interaction에 대해서도 bound state가 존재한다.)   \n",
-        "Superconductor에서 weak interaction이 bound state를 만드는 이유는 전자의 energy가 fermi surface부근에만 존재하고 따라서 에너지 density가 $\\rho(\\epsilon)\\to \\rho(\\epsilon_F)$로서 2차원과 마찬가지로 constant가 되기 때문이다. (See **Appendix - Bounded states of weak potential**.)\n",
+        "Superconductor에서 weak interaction이 bound state를 만드는 이유는 전자의 energy가 fermi surface부근에만 존재하고 따라서 에너지 density가 $\\rho(\\epsilon)\\to \\rho(\\epsilon_F)$로서 2차원과 마찬가지로 constant가 되기 때문이다. (See **Appendix - Bound states of weak potential**.)\n",
         "\n",
         "\n",
         "[^MFYS]: MFYS - 2001WETSSP - Solid_State_Physics  \n",
@@ -953,8 +957,8 @@
         "\n",
         "두번째 interaction 항은 다음과 같다.  \n",
         "$$\\begin{align*}\n",
-        "\\langle \n",
-        "&c^\\dagger_{\\bf k\\uparrow}c^\\dagger_{-\\bf k\\downarrow}\n",
+        "&\\langle \n",
+        "c^\\dagger_{\\bf k\\uparrow}c^\\dagger_{-\\bf k\\downarrow}\n",
         "c_{-\\bf k'\\downarrow}c_{\\bf k'\\uparrow} \\rangle = \\langle\\Psi_\\text{BCS}|P^\\dagger_{\\bf k}\n",
         "P_{\\bf k'}|\\Psi_\\text{BCS}\\rangle\\\\\n",
         "&=\\langle0|\\prod_{\\bf k_2}(u^*_{\\bf k_2}+v^*_{\\bf k_2}P_{\\bf k_2})\n",
@@ -962,19 +966,19 @@
         "P_{\\bf k'}\n",
         "\\prod_{\\bf k_1}(u^*_{\\bf k_1}+v^*_{\\bf k_1}P_{\\bf k_1}) |0\\rangle \\\\\n",
         "&=\\langle0|\\prod_{\\bf k_2\\neq k,k'}(u^*_{\\bf k_2}+v^*_{\\bf k_2}P_{\\bf k_2})\\\\\n",
-        "&\\times (u^*_{\\bf k}+v^*_{\\bf k}P_{\\bf k})\n",
+        "&\\quad\\times (u^*_{\\bf k}+v^*_{\\bf k}P_{\\bf k})\n",
         "(u^*_{\\bf k'}+v^*_{\\bf k'}P_{\\bf k'})\n",
         "P^\\dagger_{\\bf k}\n",
         "P_{\\bf k'}(u_{\\bf k}+v_{\\bf k}P^\\dagger_{\\bf k})\n",
         "(u_{\\bf k'}+v_{\\bf k'}P^\\dagger_{\\bf k'}) \\\\\n",
-        "&\\times \\prod_{\\bf k_1\\neq k,k'}(u^*_{\\bf k_1}+v^*_{\\bf k_1}P_{\\bf k_1}) |0\\rangle\\\\\n",
+        "&\\quad\\times \\prod_{\\bf k_1\\neq k,k'}(u^*_{\\bf k_1}+v^*_{\\bf k_1}P_{\\bf k_1}) |0\\rangle\\\\\n",
         "&=\\langle0|\\prod_{\\bf k_2\\neq k,k'}(u^*_{\\bf k_2}+v^*_{\\bf k_2}P_{\\bf k_2})\\\\\n",
-        "&\\times (u^*_{\\bf k}+v^*_{\\bf k}P_{\\bf k})\n",
+        "&\\quad\\times (u^*_{\\bf k}+v^*_{\\bf k}P_{\\bf k})\n",
         "(u^*_{\\bf k'}+v^*_{\\bf k'}P_{\\bf k'})\n",
         "P^\\dagger_{\\bf k}\n",
         "u_{\\bf k}\n",
         "v_{\\bf k'} \\\\\n",
-        "&\\times \\prod_{\\bf k_1\\neq k,k'}(u^*_{\\bf k_1}+v^*_{\\bf k_1}P_{\\bf k_1}) |0\\rangle\\\\\n",
+        "&\\quad\\times \\prod_{\\bf k_1\\neq k,k'}(u^*_{\\bf k_1}+v^*_{\\bf k_1}P_{\\bf k_1}) |0\\rangle\\\\\n",
         "&= v^*_\\mathbf k  u^*_{\\bf k'} u_{\\bf k}v_{\\bf k'}= v^*_\\mathbf k v_{\\bf k'}u^*_{\\bf k'} u_{\\bf k}\n",
         "\\end{align*}\n",
         "$$\n",
@@ -987,7 +991,8 @@
         "-g^2\\sum_{\\bf k',k}v^*_\\mathbf k v_{\\bf k'} u^*_{\\bf k'} u_{\\bf k}\n",
         "$$  \n",
         "\n",
-        "$u, v$를 독립 변수로 두고 다음의 두가지 constraint를 고려하여 E를 최소화하는 조건을 찾는다.  \n",
+        "$u, v$를 독립 변수로 두고 다음의 두가지 constraint를 고려하여 E를 최소화하는 조건을 찾는다. \n",
+        " \n",
         "$$\n",
         "\\begin{gather*}\n",
         "|u_\\mathbf k|^2 + |v_\\mathbf k|^2 = 1\\\\\n",
@@ -1503,7 +1508,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Bounded states of weak potential\n",
+        "## Bound states of weak potential\n",
+        "\n",
+        "두 개의 particle이 약한 interaction을 하는 것으로 가정한다.  \n",
+        "Interaction은 반경이 $R$이하일 때 위치에너지가 $-V_0$인 finite potential well이다.  \n",
         "\n",
         "Scrodinger 방정식은 다음과 같다. (reduced mass  $\\mu={m\\over2}$)\n",
         "\n",
@@ -1565,7 +1573,7 @@
         "\n",
         "$|V_0|=-V_0\\to 0$일 경우 왼쪽항은 $+\\infty$로 발산한다.  \n",
         "1차원과 2차원에서는 $-V_0=|V_0|$가 작더라도 그것을 만족시키는 $|E|$의 해가 존재하지만, 3차원에서는 존재하지 않는다.  \n",
-        "따라서 3차원에서 weak potential은 bounded state를 형성할 수 없다.  \n",
+        "따라서 3차원에서 weak potential은 bound state를 형성할 수 없다.  \n",
         "\n",
         "[^Ketterle]: Ketterle et.al, Making, probing and understanding ultracold Fermi gases arXiv:0801.2500  \n",
         "    https://ocw.mit.edu/courses/physics/8-422-atomic-and-optical-physics-ii-spring-2013/readings/ Lecture 20."
