--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -1312,7 +1312,7 @@
         "{\\Delta(T)\\over\\Delta(0)} = \\sqrt{1-{T\\over T_c}}\n",
         "$$\n",
         "\n",
-        "BCS의 이론치와 실험 결과는 다음과 같다. [^Margin]\n",
+        "BCS의 이론치와 실험 결과는 다음과 같다. [^Margin] [^numerical]\n",
         "\n",
         "![https://imgur.com/75vPTwH](https://i.imgur.com/75vPTwH.png)  \n",
         "\n",
@@ -1360,7 +1360,13 @@
         "    \\sum_{n=0}^\\infty{1\\over (2n+1)^3} =\n",
         "    \\sum_{n=1}^\\infty {1\\over n^3}-\\sum_{n=1}^\\infty{1\\over(2n)^2} = {7\\over8}\\zeta(3)\n",
         "    $$\n",
-        "    을 이용하여 오른 쪽 항을 구할 수 있다.  "
+        "    을 이용하여 오른 쪽 항을 구할 수 있다. \n",
+        "    \n",
+        "\n",
+        "[^numerical]: numerical plotting of gap-temperautre curve  \n",
+        "    [Numerical plotting](https://www.wolframalpha.com/input/?i=plot+tanh%281.74*sqrt%281%2Ft+-1%29%29+from+t%3D0+to+1)   \n",
+        "    [Superconducting gap, temperature dependence: how to calculate this integral?](https://physics.stackexchange.com/questions/192416/interpolation-formula-for-bcs-superconducting-gap)  \n",
+        "    [Interpolation formula for BCS superconducting gap](https://physics.stackexchange.com/questions/192416/interpolation-formula-for-bcs-superconducting-gap)  "
       ],
       "metadata": {
         "id": "1ZDdeFlo9FUO"
