Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -746,7 +746,7 @@
         "\\sum_{\\bf k} \\varphi_\\mathbf k e^{i\\mathbf k(\\mathbf r_1-\\mathbf r_2)} {1\\over\\sqrt 2}(\\left|\\uparrow\\right\\rangle_1\\left|\\downarrow\\right\\rangle_2 - \\left|\\downarrow\\right\\rangle_1\\left|\\uparrow\\right\\rangle_2)\\tag{34.1.4}\n",
         "$$\n",
         "\n",
-        "복잡한 1,2 index 대신에 second quantization form으로 표기하면 다음과 같다.[^solyom3] \n",
+        "복잡한 1,2 index 대신에 second quantization form으로 표기하면 다음과 같다.[^solyom3] [^Park] \n",
         "$$\n",
         "|\\Psi\\rangle = \\sum_{\\bf k}\\varphi_{\\bf k}c^\\dagger_{\\bf k\\uparrow}c^\\dagger_{-\\bf k\\downarrow}|0\\rangle\n",
         "$$\n",
@@ -836,7 +836,11 @@
         "\n",
         "[^Annett]: Superconductivity, Superfluids, and Condensates - Annett\n",
         "[^Annett2]: Superconductivity, Superfluids, and Condensates - Annett\n",
-        "[^solyom3]: Fundamentals of the Physics of Solids Volume 3 Normal, Broken-Symmetry, and Correlated Systems - Sólyom (34.1.4)"
+        "[^solyom3]: Fundamentals of the Physics of Solids Volume 3 Normal, Broken-Symmetry, and Correlated Systems - Sólyom (34.1.4)\n",
+        "\n",
+        "[^Park]: SC_lecture_note - Kwon Park.pdf\n",
+        "    Cooper의 original paper와 유사한 계산  \n",
+        "    http://newton.kias.re.kr/~brane/wc2013/  "
       ],
       "metadata": {
         "id": "6G_YyB9DTBdP"
