Colaboratory를 통해 생성됨

--- a/doc/relativity/relativity.ipynb
+++ b/doc/relativity/relativity.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "relativity.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMZc13TvX26Y8zQZ1tqjYB2",
+      "authorship_tag": "ABX9TyP5+vIO5CgfeG2G9uvxTUc0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,15 +28,32 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "hxFutXakGyoK"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        ""
-      ]
+        "# Ref  \n",
+        "\n",
+        "## General Relativity\n",
+        "\n",
+        "Carrol - Spacetime and Geometry An Introduction to General Relativity [^Carroll14]  \n",
+        "Hartle - Gravity: An Introduction to Einstein’s General Relativity [^Hartle21]  \n",
+        "Schutz - A First Course in General Relativity [^Schutz09]  \n",
+        "\n",
+        "[^Carroll14]: Good textbook for general relativity  \n",
+        "[^Hartle21]: Easy and a lot of good examples  \n",
+        "[^Schutz09]: Good introduction and derivations  \n",
+        "\n",
+        "## Special Relativity  \n",
+        "\n",
+        "Wolfgang Rindler - Introduction to Special Relativity [^Rindler85]  \n",
+        "\n",
+        "[^Rindler85]: Derivation of Lorentz transformation  \n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "45Xxzu5dHIYG"
+      }
     }
   ]
 }
