Colaboratory를 통해 생성됨

--- a/doc/relativity/relativity.ipynb
+++ b/doc/relativity/relativity.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "relativity.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNP+u3uS0Pag2VpvJ7cPehL",
+      "authorship_tag": "ABX9TyNtbazYX5Sa4sx0THpyiyaF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,8 +44,11 @@
         "\n",
         "## Special Relativity  \n",
         "\n",
+        "Bais Very Special Relativity - An Illustrated Guide [^Bais]\n",
+        "\n",
         "Wolfgang Rindler - Introduction to Special Relativity [^Rindler85]  \n",
         "\n",
+        "[^Bais07]: Space-time diagram illustrated  \n",
         "[^Rindler85]: Derivation of Lorentz transformation  \n",
         "\n",
         "\n",
