Colaboratory를 통해 생성됨

--- a/doc/relativity/relativity.ipynb
+++ b/doc/relativity/relativity.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "relativity.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNtbazYX5Sa4sx0THpyiyaF",
+      "authorship_tag": "ABX9TyMfWPO+3G7RANKqpV4Ux9jI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,7 @@
         "Carrol - Spacetime and Geometry An Introduction to General Relativity [^Carroll14]  \n",
         "Hartle - Gravity: An Introduction to Einstein’s General Relativity [^Hartle21]  \n",
         "Schutz - A First Course in General Relativity [^Schutz09]  \n",
+        "MIT lecture - https://youtube.com/playlist?list=PLUl4u3cNGP629n_3fX7HmKKgin_rqGzbx\n",
         "\n",
         "[^Carroll14]: Good textbook for general relativity  \n",
         "[^Hartle21]: Easy and a lot of good examples  \n",
