Colaboratory를 통해 생성됨

--- a/doc/relativity/relativity.ipynb
+++ b/doc/relativity/relativity.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "relativity.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMfWPO+3G7RANKqpV4Ux9jI",
+      "authorship_tag": "ABX9TyO+ol+ip05ESfnGckZobM7m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,11 +37,13 @@
         "Carrol - Spacetime and Geometry An Introduction to General Relativity [^Carroll14]  \n",
         "Hartle - Gravity: An Introduction to Einstein’s General Relativity [^Hartle21]  \n",
         "Schutz - A First Course in General Relativity [^Schutz09]  \n",
-        "MIT lecture - https://youtube.com/playlist?list=PLUl4u3cNGP629n_3fX7HmKKgin_rqGzbx\n",
+        "MIT lecture - https://youtube.com/playlist?list=PLUl4u3cNGP629n_3fX7HmKKgin_rqGzbx  \n",
+        "Needham - Visual Differential Geometry and Forms A Mathematical Drama in Five Acts [^Needham21]  \n",
         "\n",
         "[^Carroll14]: Good textbook for general relativity  \n",
         "[^Hartle21]: Easy and a lot of good examples  \n",
         "[^Schutz09]: Good introduction and derivations  \n",
+        "[^Needham21]: Visual differential geometry  \n",
         "\n",
         "## Special Relativity  \n",
         "\n",
@@ -146,15 +148,26 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "## Curved surface  \n",
+        "\n",
+        "**Angle sum of trangle** [^1]  \n",
+        "\n",
+        "$$\n",
+        "\\text{Angle sum of tranlge}-\\pi={A\\over r^2}\n",
+        "$$\n",
+        "\n",
+        "Proof - Needham [^2]  \n",
+        "\n",
+        "[^1]: Hartle21  \n",
+        "[^2]: Needham21  \n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "sjoXbDOccD2t"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "bIqiIuSItsgA"
+      }
     }
   ]
 }
