Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -409,8 +409,10 @@
         "$$\n",
         "Transformed Hamiltonian:\n",
         "$$\n",
+        "\\begin{gather*}\n",
         "H' = H_0+H_\\text{eff}\\\\\n",
         "H_\\text{eff} = {\\eta^2\\over2}[H_1,S]\n",
+        "\\end{gather*}\n",
         "$$\n",
         "\n",
         "**Fröhlich Hamiltonian**\n",
@@ -419,10 +421,12 @@
         "$H_{ph}$: free phonon  \n",
         "$H_{e-ph}$: electron-phonon interaction\n",
         "$$\n",
+        "\\begin{gather*}\n",
         "H = H_{e}+H_{ph}+H_{e-ph}\\\\\n",
         "=\\sum_{\\bf k}\\epsilon_{\\bf k}c^\\dagger_{\\bf k}c_{\\bf k}\n",
         "+\\sum_{\\bf q}\\omega_{\\bf q}\\left(a^\\dagger_{\\bf q}a_{\\bf q}+{1\\over2}\\right)\n",
         "+\\sum_{\\bf k,q}g_{\\bf k,q}c^\\dagger_{\\bf k+q}c_{\\bf k}(a_{\\bf q}+a^\\dagger_{\\bf -q})\n",
+        "\\end{gather*}\n",
         "$$\n",
         "  \n",
         "$\\eta H_1\\to H_{e-ph}, \\eta S\\to S$로 놓고, 이제 $S$를 다음과 같이 추정(ansatz)한다.  \n",
