Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -197,7 +197,7 @@
         "Phonon은 atom의 진동에 의한 sound wave가 양자화 된 것을 말한다.\n",
         "\n",
         "<div>\n",
-        "<img src=\"https://i.imgur.com/44ANiKN.png\" label=\"https://imgur.com/a/28NxrZb\" width=\"500\"/>\n",
+        "<img src=\"https://i.imgur.com/44ANiKN.png\" width=\"500\"/>\n",
         "</div>\n",
         "\n",
         "$x_j$: Displacement from lattice points  \n",
