--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -197,9 +197,8 @@
         "Phonon은 atom의 진동에 의한 sound wave가 양자화 된 것을 말한다.\n",
         "\n",
         "<div>\n",
-        "<img src=\"https://i.imgur.com/44ANiKN.png\" height=\"200\"/>\n",
+        "<img src=\"https://i.imgur.com/44ANiKN.png\" width=\"500\"/>\n",
         "</div>\n",
-        "\n",
         "$x_j$: Displacement from lattice points  \n",
         "\n",
         "Hamiltonian은 다음과 같다.\n",
@@ -253,7 +252,6 @@
         "a^\\dagger_ka_k+{1\\over2}\n",
         "\\right)\n",
         "$$\n",
-        "\n",
         "\n",
         "## 3-dimensional phonon with vibration mode\n",
         "\n",
@@ -338,32 +336,7 @@
         "이것을 Feynman diagram으로 그려보면 다음과 같다.  \n",
         "\n",
         "![](https://i.imgur.com/oD8lBLT.png)\n",
-        "\n",
-        "[^solyom]: solyom 23.1\n",
-        "    The first term gives the equilibrium value of the electron–ion interaction. This lattice-periodic potential has to be included in (17.1.1) to calculate the energy spectrum of the electrons in the static lattice.\n",
-        "\n",
-        "[^Lancaster]: Lancaster (Error fixed in the definition of $a^\\dagger_k$)  \n",
-        "\n",
-        "[^Marino]: Marino - Quantum Field Theory Approach to Condensed Matter Physics\n",
-        "\n",
-        "[^Marino2]:\n",
-        "    Marino - Volume3   \n",
-        "        > Using (3.12), (3.13) and (3.14), we can write it as (3.49)  \n",
-        "    Confusing!  \n",
-        "    Just use (3.12), (3.13)  \n",
-        "    First term (electron propagation term:  $$\n",
-        "    H_{e} = \\sum_{\\bf k,k',\\sigma}c^\\dagger_{\\bf k\\sigma}c_{\\bf k'\\sigma}\n",
-        "    \\int d^3xe^{i\\bf (k'-k)\\cdot x}{1\\over N} \\sum_RV({\\bf x-R}) \\\\\n",
-        "    $$\n",
-        "    여기서 lattice 구조에 의해 두 momentum의 차이는 reciprocal vector $\\mathbf Q$와 같다.  \n",
-        "    $$\n",
-        "    \\mathbf k' - \\mathbf k = \\mathbf Q \\tag{3.50}\n",
-        "    $$\n",
-        "    따라서,\n",
-        "    $$\n",
-        "    H_{e}=\\sum_{\\bf Q,k,\\sigma}V(\\mathbf Q)c^\\dagger_{\\bf k\\sigma}c_{\\bf k+Q,\\sigma}\\tag{3.51}\n",
-        "    $$\n",
-        "    Since $E(\\mathbf k) = E ({\\bf k + Q})$, according to the Bloch theorem, this means the scattered electron will have the same energy it has before the scattering. On the other hand, physical momenta corresponding to wave-vectors satisfying the relation (3.50) are precisely the same. Hence we can now completely understand why an electron in a Bravais lattice propagates without being scattered: its momentum and energy simply are not changed as it propagates.  "
+        "\n"
       ],
       "metadata": {
         "id": "6ApatphlyEcq"
