Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -336,7 +336,13 @@
         "이것을 Feynman diagram으로 그려보면 다음과 같다.  \n",
         "\n",
         "![](https://i.imgur.com/oD8lBLT.png)\n",
-        "\n"
+        "\n",
+        "[^solyom]: solyom 23.1\n",
+        "    The first term gives the equilibrium value of the electron–ion interaction. This lattice-periodic potential has to be included in (17.1.1) to calculate the energy spectrum of the electrons in the static lattice.\n",
+        "\n",
+        "[^Lancaster]: Lancaster (Error fixed in the definition of $a^\\dagger_k$)  \n",
+        "\n",
+        "[^Marino]: Marino - Quantum Field Theory Approach to Condensed Matter Physics\n"
       ],
       "metadata": {
         "id": "6ApatphlyEcq"
