Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -342,7 +342,10 @@
         "\n",
         "[^Lancaster]: Lancaster (Error fixed in the definition of $a^\\dagger_k$)  \n",
         "\n",
-        "[^Marino]: Marino - Quantum Field Theory Approach to Condensed Matter Physics\n"
+        "[^Marino]: Marino - Quantum Field Theory Approach to Condensed Matter Physics\n",
+        "\n",
+        "[^Marino2]: Marino - Volume3   \n",
+        "    Using (3.12), (3.13) and (3.14), we can write it as (3.49)  \n"
       ],
       "metadata": {
         "id": "6ApatphlyEcq"
