Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -350,17 +350,8 @@
         "    Just use (3.12), (3.13)  \n",
         "    First term (electron propagation term:  $$\n",
         "    H_{e} = \\sum_{\\bf k,k',\\sigma}c^\\dagger_{\\bf k\\sigma}c_{\\bf k'\\sigma}\n",
-        "    \\int d^3xe^{i\\bf (k'-k)\\cdot x}{1\\over N} \\sum_RV({\\bf x-R}) \\\\\n",
-        "    $$\n",
-        "    여기서 lattice 구조에 의해 두 momentum의 차이는 reciprocal vector $\\mathbf Q$와 같다.  \n",
-        "    $$\n",
-        "    \\mathbf k' - \\mathbf k = \\mathbf Q \\tag{3.50}\n",
-        "    $$\n",
-        "    따라서,\n",
-        "    $$\n",
-        "    H_{e}=\\sum_{\\bf Q,k,\\sigma}V(\\mathbf Q)c^\\dagger_{\\bf k\\sigma}c_{\\bf k+Q,\\sigma}\\tag{3.51}\n",
-        "    $$\n",
-        "    Since $E(\\mathbf k) = E ({\\bf k + Q})$, according to the Bloch theorem, this means the scattered electron will have the same energy it has before the scattering. On the other hand, physical momenta corresponding to wave-vectors satisfying the relation (3.50) are precisely the same. Hence we can now completely understand why an electron in a Bravais lattice propagates without being scattered: its momentum and energy simply are not changed as it propagates.  \n"
+        "    \\int d^3xe^{i\\bf (k'-k)\\cdot x}{1\\over N} \\sum_RV({\\bf x-R})\n",
+        "    $$\n"
       ],
       "metadata": {
         "id": "6ApatphlyEcq"
