Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -345,13 +345,17 @@
         "[^Marino]: Marino - Quantum Field Theory Approach to Condensed Matter Physics\n",
         "\n",
         "[^Marino2]: Marino - Volume3   \n",
-        "    Using (3.12), (3.13) and (3.14), we can write it as (3.49)  \n",
-        "    Confusing!  \n",
-        "    Just use (3.12), (3.13)  \n",
-        "    First term (electron propagation term:  $$\n",
+        "\n",
+        "**Marino2 참고**\n",
+        "\n",
+        "Using (3.12), (3.13) and (3.14), we can write it as (3.49)  \n",
+        "Confusing!  \n",
+        "Just use (3.12), (3.13)  \n",
+        "First term (electron propagation term:  $$\n",
         "    H_{e} = \\sum_{\\bf k,k',\\sigma}c^\\dagger_{\\bf k\\sigma}c_{\\bf k'\\sigma}\n",
         "    \\int d^3xe^{i\\bf (k'-k)\\cdot x}{1\\over N} \\sum_RV({\\bf x-R})\n",
-        "    $$\n"
+        "$$\n",
+        "\n"
       ],
       "metadata": {
         "id": "6ApatphlyEcq"
