Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -357,9 +357,9 @@
         "$$\n",
         "여기서 lattice 구조에 의해 두 momentum의 차이는 reciprocal vector $\\mathbf Q$와 같다.  \n",
         "$$\n",
-        "k-k=Q\\tag{3.50}\n",
+        "\\mathbf{k}' - \\mathbf{k} = \\mathbf{Q}\\tag{3.50}\n",
         "$$\n",
-        "따라서,\n"
+        "따라서,..\n"
       ],
       "metadata": {
         "id": "6ApatphlyEcq"
