--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -359,7 +359,11 @@
         "$$\n",
         "\\mathbf{k}' - \\mathbf{k} = \\mathbf{Q}\\tag{3.50}\n",
         "$$\n",
-        "따라서,..\n"
+        "따라서,\n",
+        "$$\n",
+        "    H_{e}=\\sum_{\\bf Q,k,\\sigma}V(\\mathbf Q)c^\\dagger_{\\bf k\\sigma}c_{\\bf k+Q,\\sigma}\\tag{3.51}\n",
+        "$$\n",
+        "Since\n"
       ],
       "metadata": {
         "id": "6ApatphlyEcq"
