Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -361,7 +361,7 @@
         "$$\n",
         "따라서,\n",
         "$$\n",
-        "    H_{e}=\\sum_{\\bf Q,k,\\sigma}V(\\mathbf Q)c^\\dagger_{\\bf k\\sigma}c_{\\bf k+Q,\\sigma}\\tag{3.51}\n",
+        "H_{e}=\\sum_{\\mathbf {Q,k},\\sigma}V(\\mathbf Q)c^\\dagger_{\\mathbf k\\sigma}c_{\\mathbf {k+Q},\\sigma}\\tag{3.51}\n",
         "$$\n",
         "Since\n"
       ],
