--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -361,9 +361,9 @@
         "$$\n",
         "따라서,\n",
         "$$\n",
-        "    H_{e}=\\sum_{\\mathbf {Q,k},\\sigma}V(\\mathbf Q)c^\\dagger_{\\mathbf k\\sigma}c_{\\mathbf {k+Q},\\sigma}\\tag{3.51}\n",
+        "    H_{e}=\\sum_{\\mathbf Q,\\mathbf k,\\sigma}V(\\mathbf Q)c^\\dagger_{\\mathbf k\\sigma}c_{\\mathbf k+\\mathbf Q,\\sigma}\\tag{3.51}\n",
         "$$\n",
-        "Since Since\n"
+        "Since Since 3\n"
       ],
       "metadata": {
         "id": "6ApatphlyEcq"
