Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -361,9 +361,11 @@
         "$$\n",
         "따라서,\n",
         "$$\n",
-        "    H_{e}=\\sum_{\\mathbf Q,\\mathbf k,\\sigma}V(\\mathbf Q)c^\\dagger_{\\mathbf k\\sigma}c_{\\mathbf k+\\mathbf Q,\\sigma}\\tag{3.51}\n",
+        "\\begin{align*}\n",
+        "    H_e=\\sum_{\\mathbf Q,\\mathbf k,\\sigma}V(\\mathbf Q)c^\\dagger_{\\mathbf k\\sigma}c_{\\mathbf k+\\mathbf Q,\\sigma}\\tag{3.51}\n",
+        "\\end{align*}\n",
         "$$\n",
-        "Since Since 3\n"
+        "Since Since 4\n"
       ],
       "metadata": {
         "id": "6ApatphlyEcq"
