--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -351,21 +351,21 @@
         "Using (3.12), (3.13) and (3.14), we can write it as (3.49)  \n",
         "Confusing!  \n",
         "Just use (3.12), (3.13)  \n",
-        "First term (electron propagation term:  $$\n",
+        "First term (electron propagation term:\n",
+        "\n",
+        "$$\n",
         "    H_{e} = \\sum_{\\bf k,k',\\sigma}c^\\dagger_{\\bf k\\sigma}c_{\\bf k'\\sigma}\n",
         "    \\int d^3xe^{i\\bf (k'-k)\\cdot x}{1\\over N} \\sum_RV({\\bf x-R})\n",
         "$$\n",
-        "여기서 lattice 구조에 의해 두 momentum의 차이는 reciprocal vector $\\mathbf Q$와 같다.  \n",
+        "\n",
+        "여기서 lattice 구조에 의해 두 momentum의 차이는 reciprocal vector $\\mathbf Q$와 같다.\n",
+        "\n",
         "$$\n",
         "\\mathbf{k}' - \\mathbf{k} = \\mathbf{Q}\\tag{3.50}\n",
         "$$\n",
+        "\n",
         "따라서,\n",
-        "$$\n",
-        "\\begin{align*}\n",
-        "    H_e=\\sum_{\\mathbf Q,\\mathbf k,\\sigma}V(\\mathbf Q)c^\\dagger_{\\mathbf k\\sigma}c_{\\mathbf k+\\mathbf Q,\\sigma}\\tag{3.51}\n",
-        "\\end{align*}\n",
-        "$$\n",
-        "Since Since 4\n"
+        "Since Since 5\n"
       ],
       "metadata": {
         "id": "6ApatphlyEcq"
