Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -365,7 +365,10 @@
         "$$\n",
         "\n",
         "따라서,\n",
-        "Since Since 5\n"
+        "$$\n",
+        "    H_{e}=\\tag{3.51}\n",
+        "$$\n",
+        "Since Since 6\n"
       ],
       "metadata": {
         "id": "6ApatphlyEcq"
