Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -366,9 +366,9 @@
         "\n",
         "따라서,\n",
         "$$\n",
-        "    H_{e}=\\sum_{\\mathbf Q,\\mathbf k,\\sigma}V \\mathbf{Q} \\tag{3.51}\n",
+        "    H_{e}=\\sum_{\\mathbf Q,\\mathbf k,\\sigma}{V {\\bf Q}} \\tag{3.51}\n",
         "$$\n",
-        "Since Since a\n"
+        "Since Since b\n"
       ],
       "metadata": {
         "id": "6ApatphlyEcq"
