--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -366,7 +366,7 @@
         "\n",
         "따라서,\n",
         "$$\n",
-        "    H_{e}=\\sum_{\\mathbf Q,\\mathbf k,\\sigma}{V( {\\bf Q})}c^\\dagger_{{\\bf k}\\sigma} \\tag{3.51}\n",
+        "    H_{e}=\\sum_{\\mathbf Q,\\mathbf k,\\sigma}{V( {\\bf Q})c^\\dagger_{\\mathbf k \\sigma}}\\tag{3.51}\n",
         "$$\n",
         "Since e\n"
       ],
