--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -366,9 +366,9 @@
         "\n",
         "따라서,\n",
         "$$\n",
-        "    H_{e}=\\sum_{\\mathbf Q,\\mathbf k,\\sigma}{V( {\\bf Q})c^\\dagger_{\\mathbf k \\sigma}}\\tag{3.51}\n",
+        "    H_{e}=\\sum_{\\mathbf Q,\\mathbf k,\\sigma}{V( {\\bf Q})c^\\dagger_{\\mathbf k \\sigma}c_{\\mathbf k + \\mathbf Q ,\\sigma}}\\tag{3.51}\n",
         "$$\n",
-        "Since e\n"
+        "Since f\n"
       ],
       "metadata": {
         "id": "6ApatphlyEcq"
