Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -366,9 +366,9 @@
         "\n",
         "따라서,\n",
         "$$\n",
-        "    H_{e}=\\sum_{\\mathbf Q,\\mathbf k,\\sigma}{V( {\\bf Q})c^\\dagger_{\\mathbf k \\sigma}}c_{{ k +  Q },\\sigma}\n",
+        "    H_e=\\sum_{\\mathbf Q,\\mathbf k,\\sigma}{V( {\\bf Q})c^\\dagger_{\\mathbf k \\sigma}}c_{{ \\mathbf k + \\mathbf Q },\\sigma}\n",
         "$$\n",
-        "Since i\n"
+        "Since $E(\\mathbf k) = E ({\\mathbf k +\\mathbf Q})$, according to the Bloch theorem, this means the scattered electron will have the same energy it has before the scattering. On the other hand, physical momenta corresponding to wave-vectors satisfying the relation (3.50) are precisely the same. Hence we can now completely understand why an electron in a Bravais lattice propagates without being scattered: its momentum and energy simply are not changed as it propagates.  \n"
       ],
       "metadata": {
         "id": "6ApatphlyEcq"
