Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -426,12 +426,12 @@
         "$H_{ph}$: free phonon  \n",
         "$H_{e-ph}$: electron-phonon interaction\n",
         "$$\n",
-        "\\begin{gather*}\n",
-        "H = H_{e}+H_{ph}+H_{e-ph}\\\\\n",
-        "=\\sum_{\\bf k}\\epsilon_{\\bf k}c^\\dagger_{\\bf k}c_{\\bf k}\n",
+        "\\begin{align*}\n",
+        "H &= H_{e}+H_{ph}+H_{e-ph}\\\\\n",
+        "&=\\sum_{\\bf k}\\epsilon_{\\bf k}c^\\dagger_{\\bf k}c_{\\bf k}\n",
         "+\\sum_{\\bf q}\\omega_{\\bf q}\\left(a^\\dagger_{\\bf q}a_{\\bf q}+{1\\over2}\\right)\n",
         "+\\sum_{\\bf k,q}g_{\\bf k,q}c^\\dagger_{\\bf k+q}c_{\\bf k}(a_{\\bf q}+a^\\dagger_{\\bf -q})\n",
-        "\\end{gather*}\n",
+        "\\end{align*}\n",
         "$$\n",
         "  \n",
         "$\\eta H_1\\to H_{e-ph}, \\eta S\\to S$로 놓고, 이제 $S$를 다음과 같이 추정(ansatz)한다.  \n",
@@ -474,13 +474,15 @@
         "$$\n",
         "이제 2nd perturbation term을 구한다.\n",
         "$$\n",
-        "H_\\text{eff} = {1\\over2}\\sum_{\\bf k,k',q} g_{\\bf k,q} g_{\\bf k',-q}\n",
+        "\\begin{align*}\n",
+        "H_\\text{eff} &= {1\\over2}\\sum_{\\bf k,k',q} g_{\\bf k,q} g_{\\bf k',-q}\n",
         "( y_{\\bf k',-q}-x_{\\bf k',-q} )\n",
         "c^\\dagger_{\\bf k+q}c_{\\bf k}\n",
         "c^\\dagger_{\\bf k'-q}c_{\\bf k'}\\\\\n",
-        "\\equiv \\sum_{\\bf k,k',q}  V_\\text{eff}({\\bf k, k', q})\n",
+        "&\\equiv \\sum_{\\bf k,k',q}  V_\\text{eff}({\\bf k, k', q})\n",
         "c^\\dagger_{\\bf k+q}c_{\\bf k}\n",
         "c^\\dagger_{\\bf k'-q}c_{\\bf k'}\n",
+        "\\end{align*}\n",
         "$$\n",
         "\n",
         "Phonon를 매개로하는 electron-electron scattering의 effective potential은 다음과 같다. [^Heid]\n",
@@ -492,7 +494,7 @@
         "}\n",
         "$$\n",
         "\n",
-        "[Heid]: Electron-Phonon Coupling - Heid.pdf\n",
+        "[^Heid]: Electron-Phonon Coupling - Heid.pdf\n",
         "\n",
         "\n"
       ],
