Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -630,12 +630,12 @@
         "\n",
         "\n",
         "<div>\n",
-        "<img src=\"https://www.researchgate.net/profile/Masatsugu-Suzuki-3/publication/278020916/figure/fig6/AS:669698907725826@1536680070438/Fig-Density-of-states-in-the-Debye-model.png\"  width=\"400\"/>\n",
+        "<img src=\"https://github.com/shevious/etc/assets/38934308/66e2b474-60ef-4592-8757-a75416099cc1\"  width=\"400\"/>\n",
         "</div>\n",
         "\n",
         "Typical Debye frequency(energy) of metal: $\\hbar\\omega_D =$ 100K ~ 500K [^Ivanov]\n",
         "\n",
-        "[^ref1]:   \n",
+        "[^ref1]: web source\n",
         "    http://personal.ph.surrey.ac.uk/~phs1ss/2SS/2SS%20lecture%208.pdf  \n",
         "    https://www.ucl.ac.uk/~ucapahh/teaching/3C25/Lecture10s.pdf  \n",
         "\n",
