--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -1436,7 +1436,7 @@
         "\n",
         "## Coherece length of Cooper pair\n",
         "\n",
-        "\bCooper pair는 momentum 공간에서의 bound state이다. Fermi energy 근처의 engergy gap $\\Delta$내에서 $\\bf k$와 $-\\bf k$의 전자들이 wave packet을 형성한다. Momontum 공간에서 이 영역의 폭은 다음과 같다.  \n",
+        "Cooper pair는 momentum 공간에서의 bound state이다. Fermi energy 근처의 engergy gap $\\Delta$내에서 $\\bf k$와 $-\\bf k$의 전자들이 wave packet을 형성한다. Momontum 공간에서 이 영역의 폭은 다음과 같다.  \n",
         "\n",
         "$$\n",
         "\\hbar\\Delta k\\approx {\\Delta\\over v_\\text F}\n",
@@ -1511,7 +1511,13 @@
         "[^solyom]:  Sólyom Ch 34.\n",
         "    $$\\langle r^2\\rangle = {4\\over3}\\left({\\hbar v_F\\over\\Delta_0}\\right)^2\\tag{34.2.41}\n",
         "    $$  \n",
-        "    "
+        "$$\n",
+        "\\begin{equation}\n",
+        "  \\int_0^\\infty \\frac{x^3}{e^x-1}\\,dx = \\frac{\\pi^4}{15}\n",
+        "  \\tag{34.2.41}\n",
+        "\\end{equation}\n",
+        "$$\n",
+        "abc"
       ],
       "metadata": {
         "id": "EMIfHa8I7_hM"
