--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -1509,15 +1509,14 @@
         "    Annett Ch.1\n",
         "\n",
         "[^solyom]:  Sólyom Ch 34.\n",
-        "    $$\\langle r^2\\rangle = {4\\over3}\\left({\\hbar v_F\\over\\Delta_0}\\right)^2\\tag{34.2.41}\n",
+        "    $$\\langle r^2\\rangle = {4\\over3}\\left({\\hbar v_F\\over\\Delta_0}\\right)^2\n",
         "    $$  \n",
         "$$\n",
-        "\\begin{equation}\n",
+        "\\begin{equation*}\n",
         "  \\int_0^\\infty \\frac{x^3}{e^x-1}\\,dx = \\frac{\\pi^4}{15}\n",
-        "  \\tag{34.2.41}\n",
-        "\\end{equation}\n",
+        "\\end{equation*}\n",
         "$$\n",
-        "abc"
+        "abc 1"
       ],
       "metadata": {
         "id": "EMIfHa8I7_hM"
