--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -1509,14 +1509,11 @@
         "    Annett Ch.1\n",
         "\n",
         "[^solyom]:  Sólyom Ch 34.\n",
-        "    $$\\langle r^2\\rangle = {4\\over3}\\left({\\hbar v_F\\over\\Delta_0}\\right)^2\n",
-        "    $$  \n",
+        "\n",
+        "$$ \\begin{align*}\\langle r^2\\rangle = {4\\over3}\\left({\\hbar v_F\\over\\Delta_0}\\right)^2\\tag{34.2.41}\\end{align*}\n",
         "$$\n",
-        "\\begin{equation*}\n",
-        "  \\int_0^\\infty \\frac{x^3}{e^x-1}\\,dx = \\frac{\\pi^4}{15}\n",
-        "\\end{equation*}\n",
-        "$$\n",
-        "abc 1"
+        "\n",
+        "abc 2"
       ],
       "metadata": {
         "id": "EMIfHa8I7_hM"
