Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -1509,11 +1509,18 @@
         "    Annett Ch.1\n",
         "\n",
         "[^solyom]:  Sólyom Ch 34.\n",
+        "    $$ \\langle r^2\\rangle = {4\\over3}\\left({\\hbar v_F\\over\\Delta_0}\\right)^2\n",
+        "    $$\n",
         "\n",
-        "$$ \\begin{align*}\\langle r^2\\rangle = {4\\over3}\\left({\\hbar v_F\\over\\Delta_0}\\right)^2\\tag{34.2.41}\\end{align*}\n",
+        "$$\n",
+        "\\begin{equation}\n",
+        "\\langle r^2\\rangle = {4\\over3}\\left({\\hbar v_F\\over\\Delta_0}\\right)^2\n",
+        "    \\text{sdf}\\\\\n",
+        "    abc  def \\tag{sdf}\n",
+        "\\end{equation}\n",
         "$$\n",
         "\n",
-        "abc 2"
+        "abc 3"
       ],
       "metadata": {
         "id": "EMIfHa8I7_hM"
