Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -1509,18 +1509,10 @@
         "    Annett Ch.1\n",
         "\n",
         "[^solyom]:  Sólyom Ch 34.\n",
-        "    $$ \\langle r^2\\rangle = {4\\over3}\\left({\\hbar v_F\\over\\Delta_0}\\right)^2\n",
+        "    $$ \\left.\\langle r^2\\rangle = {4\\over3}\\left({\\hbar v_F\\over\\Delta_0}\\right)^2\\right. \\tag{34.2.41}\n",
         "    $$\n",
         "\n",
-        "$$\n",
-        "\\begin{equation}\n",
-        "\\langle r^2\\rangle = {4\\over3}\\left({\\hbar v_F\\over\\Delta_0}\\right)^2\n",
-        "    \\text{sdf}\\\\\n",
-        "    abc  def \\tag{sdf}\n",
-        "\\end{equation}\n",
-        "$$\n",
-        "\n",
-        "abc 3"
+        "abc 5"
       ],
       "metadata": {
         "id": "EMIfHa8I7_hM"
